css/style.css
*{
    font-family: 'Roboto', sans-serif;
}
/* Styling for the first section */
.container1{
    background-image: url(../assets/h_img.jpg);
    -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
 background-size: cover;
    background-position: center;
    background-size: cover;
    height: 100vh;
    color: white;
    align-items: center;
    padding-top: 200px;

}

.container1 h1{
    text-align: center;
padding-top: 90px;
}
.container1 p{
    padding-bottom: 200px;
    text-align: center;
}
.imaged{
    display: flex;
    justify-content: center;
}
image2{
    margin-top: 60px;
}
/* ABOUT US SECTION */
.aboutus{
    text-align: center;
    height: 100%;
    margin-bottom: 50px;
    
}
.aboutus h2{
    margin-top: 80px;
}
.aboutus p{
    line-height: 1.5rem;
}
/* SERVICES SECTION */
.bg-image{
    background-image: url(../assets/s_image.jpg);
    -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
    height: 100%;
    color: white;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    text-align: center;
  
    
    overflow: hidden;
}
#services h5{
    padding-top: 100px;
}
/* WHAT WE DO */
.whatwedo{
    display: flex;
    justify-content: space-evenly;
    text-align: center;
    height: 100%;
   
}
.whatwedo img{
    width: 100%;
    height: 15vw;
    object-fit: scale-down;
}
.card p{
 font-size: small;   
}

.entirewhat h3{
    text-align: center;
    margin-bottom: 30px;
    margin-top: 10px;
    
}
.display1,.display2,.display3{
    display: none;
 }

/* Portfolio */
.portfolio{
    height: 100%;
    padding-bottom: 38px;
}
.firstfour{
    display: flex;
    justify-content: center
    ;
}
.firstfour img{
    /* height: 150px; */
    object-fit: scale-down;
    height: 15vw;
    padding-right: 15px;
}
.secondfour{
    display: flex;
    justify-content: center;
    margin-top: 30px;
}
.secondfour img{
    height: 164px;
    object-fit: scale-down;
    height: 15vw;
    padding-right: 17px;
}
.container4{
    background-image: url(../assets/work8.jpg);
    background-repeat: no-repeat;
    background-size: 400px;
    background-position: center;
    color: white;
    font-weight: bolder;
    object-fit: scale-down;
    width: 18vw;
}
/* container css */
.portfolios {
    position: relative;
    /* width: 50%; */
  }
  
  .image {
    opacity: 1;
    display: block;
    width: 100%;
    /* height: auto; */
    transition: .5s ease;
    backface-visibility: hidden;
  }
  
  .middle {
    transition: .5s ease;
    opacity: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    text-align: center;
  }
  
  .portfolios:hover .image {
    opacity: 0.3;
  }
  
  .portfolios:hover .middle {
    opacity: 1;
  }
  
  .text {
    background-color: black;
    color:white;
    font-size: 16px;
    padding: 16px 32px;
    font-weight: bolder;
    font-size: 35px;
  }
  
/* contact us */
.contactus{
    background-image: url(../assets/c_image.jpg);
    height: 100%;
    background-position: center;
    background-size: cover;
    color: white;
    text-align: center;
}
#textarea{
    width: 800px;
    background-color: transparent;
    height: 250px;
    margin-top:24px;
    border: 1px solid white;
}
.form-input{
    width: 400px;
    background-color: transparent;
    margin-right: 16px;
    border: 1px solid white;
}

.firstpart{
    display: flex;
    justify-content: space-evenly;
}
.contactus form{
height: 100%;

}
.contactus h3{
    padding-top: 40px;
    margin-bottom: 30px;
    
}

